--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "pg": "^8.16.3",
     "prisma": "^6.16.2",
     "sequelize": "^6.37.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
