--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma": "^6.16.2",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
+    "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
