--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
+    "dotenv": "^17.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2"
   },
   "devDependencies": {
