--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "dotenv": "^17.2.2",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
