oremiere conservation de tout fonctioonel

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^3.0.2",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
